--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react-dom": "^18.3.1",
+    "react-router": "^7.7.1",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
